name:                URLshortener
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wangzhicheng/URLshortener#readme
license:             BSD3
license-file:        LICENSE
author:              Wang Zhicheng
maintainer:          wangzhicheng.thu@gmail.com
copyright:           (c) 2019 Wang Zhicheng
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable URLshortener
  hs-source-dirs:    src
  main-is:           Main.hs
  ghc-options:       -threaded
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5,
                     bytestring,
                     hedis,
                     mtl,
                     network-uri,
                     random,
                     scotty,
                     semigroups,
                     text,
                     transformers
