name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wangzhicheng/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              Wang Zhicheng
maintainer:          wangzhicheng.thu@gmail.com
copyright:           (c) 2019 Wang Zhicheng
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     data/words.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
