name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wangzhicheng/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Wang Zhicheng
maintainer:          wangzhicheng.thu@gmail.com
copyright:           (c) 2019 Wang Zhicheng
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       QuickCheck


executable morse
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       morse,
                       QuickCheck
  default-language:    Haskell2010

test-suite tests
  main-is:             tests.hs
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck,
                       containers,
                       morse
