name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:  
license:             BSD3
license-file:        
author:              Wang Zhicheng
maintainer:          wangzhicheng.thu@gmail.com
copyright:           2019 Wang Zhicheng
category:            
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  

library 
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
